[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "central-set-cli"
version = "1.0.1"
authors = [
  { name="Real Data-Driven", email="real.datadriven@gmail.com" },
]
description = "A python cli for "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/realdatadriven/central-set-cli"
"Bug Tracker" = "https://github.com/realdatadriven/central-set-cli/issues"